feat: add elastic search

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -70,6 +70,10 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+  data:
+    elasticsearch:
+      cluster-nodes: 127.0.0.1:9300
+
   thymeleaf:
     mode: LEGACYHTML5
     encoding: UTF-8
